# mlops-house-price-predictor

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflow/: mlops-ci-workflow.yaml
.github/workflows/: mlops-ci-workflow.yaml  mlops-pipeline.yaml
configs/: model_config.yaml
notebooks/: 00_data_engineering.ipynb  01_exploratory_data_analysis.ipynb  02_feature_engineering.ipynb  03_experimentation.ipynb
src/api/: inference.py  main.py
src/data/: run_processing.py
src/features/: engineer.py
src/models/: train_model.py
streamlit_app/: app.py
