[project]
name = "mlops-house-price-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.95.2",
    "ipykernel==6.29.5",
    "joblib==1.3.1",
    "matplotlib==3.7.1",
    "mlflow==2.3.1",
    "numpy==1.24.3",
    "pandas==1.5.3",
    "pytest==7.3.1",
    "pyyaml==6.0",
    "scikit-learn==1.2.2",
    "seaborn==0.12.2",
    "setuptools==65.5.0",
    "streamlit>=1.55.0",
    "uvicorn==0.22.0",
    "xgboost==1.7.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 100